--- a/book.ipynb
+++ b/book.ipynb
@@ -33,7 +33,7 @@
    "source": [
     "#pick your module and enter the smart contract address\n",
     "nft_smart_contract_address = \"0xf27C2a1c44E6F16Fbcc9FBB582d7799057Dc57a6\"\n",
-    "nft_module = sdk.get_nft_module(nft_smart_contract_address)\n",
+    "nft_module = sdk.geț_nft_module(nft_smart_contract_address)\n",
     "\n",
     "currency_smart_contract_address = \"0x10E49aaBDad7B8Aa624fbbaCD6b93DC20e3dDBcD\"\n",
     "currency_module = sdk.get_currency_module(currency_smart_contract_address)"
