--- a/NFT_Module.ipynb
+++ b/NFT_Module.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,28 +27,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#pick your module and enter the smart contract address\n",
     "nft_smart_contract_address = \"0xf27C2a1c44E6F16Fbcc9FBB582d7799057Dc57a6\"\n",
-    "nft_module = sdk.geț_nft_module(nft_smart_contract_address)\n",
-    "\n",
-    "currency_smart_contract_address = \"0x10E49aaBDad7B8Aa624fbbaCD6b93DC20e3dDBcD\"\n",
-    "currency_module = sdk.get_currency_module(currency_smart_contract_address)"
+    "nft_module = sdk.get_nft_module(nft_smart_contract_address)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7\n"
+      "13\n"
      ]
     }
    ],
@@ -164,7 +161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.0"
   },
   "orig_nbformat": 4
  },
