Currency module completed

--- a/Currency_module.ipynb
+++ b/Currency_module.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,32 +27,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#pick your module and enter the smart contract address\n",
-    "nft_smart_contract_address = \"0xdd25FAEE772FbB1bcB7ba0b2cEE6387A8F82f032\"\n",
-    "nft_module = sdk.get_nft_module(nft_smart_contract_address)"
+    "currency_module_address = \"0xEdCFC14D03d3aA8A8fF19170bb2F6231D99E1491\"\n",
+    "currency_module = sdk.get_currency_module(currency_module_address)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "2000000000000000000000\n"
      ]
     }
    ],
    "source": [
     "#This method prints out the balance of your nft smartcontract\n",
     "#The amount returend is the amount of nft's that this contract is holding!\n",
-    "print(nft_module.balance())"
+    "print(currency_module.balance())"
    ]
   },
   {
