--- a/market_module.ipynb
+++ b/market_module.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "# Importing stuff\n",
-    "from nftlabs import NftlabsSdk, SdkOptions, ListArg, MintArg\n",
+    "from nftlabs import NftlabsSdk, SdkOptions, ListArg, MintArg, Role\n",
     "import os"
    ]
   },
