--- a/market_module.ipynb
+++ b/market_module.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "# Importing stuff\n",
-    "from nftlabs import NftlabsSdk, SdkOptions, ListArg, MintArg, Role\n",
+    "from thirdweb import ThirdwebSdk, SdkOptions, ListArg, MintArg, Role\n",
     "import os"
    ]
   },
@@ -25,7 +25,7 @@
     "#choose your network\n",
     "\n",
     "network = \"https://rinkeby-light.eth.linkpool.io/\"\n",
-    "sdk = NftlabsSdk(SdkOptions(), network)\n",
+    "sdk = ThirdwebSdk(SdkOptions(), network)\n",
     "#dont forget to hide your private key\n",
     "sdk.set_private_key(\"a0064ca30a15d338590d95fc7d1e87f889d11fe31897340b391674e84d49f1ee\")"
    ]
