--- a/Currency_module.ipynb
+++ b/Currency_module.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,22 +12,69 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#choose your network\n",
+    "## Setting up the sdk\n",
     "\n",
-    "network = \"https://rinkeby-light.eth.linkpool.io/\"\n",
-    "sdk = ThirdwebSdk(SdkOptions(), network)\n",
-    "#dont forget to hide your private key\n",
-    "sdk.set_private_key(\"a0064ca30a15d338590d95fc7d1e87f889d11fe31897340b391674e84d49f1ee\")"
+    "To start using the sdk, you only need one thing: an RPC URL.\n",
+    "\n",
+    "The RPC URL will depend on the chain you're using. Here are a few of the common RPC urls:\n",
+    "\n",
+    "| Chain Name                 | ID     | RPC URL                         |\n",
+    "|----------------------------|--------|---------------------------------|\n",
+    "| Polygon Mainnet            | 137    | https://polygon-rpc.com         |\n",
+    "| Polygon Mumbai (testnet)   | 80001  | https://rpc-mumbai.matic.today  |\n",
+    "| Ethereum Rinkeby (testnet) | 421611 | https://rinkeby-light.eth.linkpool.io/ |\n",
+    "\n",
+    "Lets instantiate the SDK and connect to the Rinkeyby testnet."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "network = \"https://rinkeby-light.eth.linkpool.io/\"\n",
+    "sdk = ThirdwebSdk(SdkOptions(), network)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Configuring a private key\n",
+    "\n",
+    "You can use the SDK *without* a private key if you are just fetching data. You can check balances, query modules, search listings, etc all without a private key.\n",
+    "\n",
+    "Once you get to a point where you want to run a transaction (like minting an NFT), you need to configure your private key.\n",
+    "\n",
+    "Here's how you configure the private key with the SDK:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dont forget to hide your private key, never share this with anyone\n",
+    "sdk.set_private_key(\"a0064ca30a15d338590d95fc7d1e87f889d11fe31897340b391674e84d49f1ee\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Instantiating a currency module\n",
+    "\n",
+    "Once we've deployed a currency module, we can connect to it using the `get_currency_module` method like this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,16 +84,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Checking Balances\n",
+    "\n",
+    "Because there are fractionals in crypto with 18+ decimal places, we need a way to convert a price into a display value.\n",
+    "\n",
+    "The `get_value` method allows you to convert a price into its decimal display value."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2000000000000000000000\n",
-      "2000.0\n"
+      "4000000000000000000000\n",
+      "CurrencyValue(name='PythonCoins', symbol='P', decimals=18, value='4000000000000000000000', display_value='4000.000000000000000000')\n",
+      "4000000000000000000000\n"
      ]
     }
    ],
@@ -54,9 +113,8 @@
     "#This method prints out the balance of your nft smartcontract\n",
     "#The amount returend is the amount of nft's that this contract is holding!\n",
     "balance = currency_module.balance()\n",
-    "balance_formatted = balance/10**18\n",
     "print(balance)\n",
-    "print(balance_formatted)\n",
+    "print(currency_module.get_value(balance))\n",
     "print(currency_module.balance_of('0x55c9bbb71a5cc11c2f0c40362bb691b33a78b764'))"
    ]
   },
@@ -79,16 +137,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using allowances\n",
+    "\n",
+    "Sometimes a smart contract needs access to your funds so that it can act on your behalf.\n",
+    "\n",
+    "For example, assume there are two wallets:\n",
+    "\n",
+    "1. Wallet `0xBOB` -> owns 100 `$MATIC`\n",
+    "2. Wallet `0xSALLY` -> owns 0 `$MATIC`\n",
+    "\n",
+    "If `0xBOB` calls `set_allowance(50, 0xSALLY)`, the wallet `0xSALLY` now has permission to spend **up to 50 `$MATIC`** from `0xBOB`s wallet, without `0xBOB` having to transfer the coins to `0xSALLY`.\n",
+    "\n",
+    "Lots of defi smart contracts use allowances to move funds between users' wallets without having the move the tokens to an intermediate wallet (which saves on gas and is more secure)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "0\n"
+     "ename": "NoSignerException",
+     "evalue": "No signer (private key) supplied to SDK",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNoSignerException\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/3k/t60fm7fn4fq585qrm1vkx6ch0000gn/T/ipykernel_80556/611352268.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#allowonce in the current wallet. Not sure what an allowance is ??\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcurrency_module\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mallowance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'0x55c9bbb71a5cc11c2f0c40362bb691b33a78b764'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcurrency_module\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mallowance_of\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'0x55c9bbb71a5cc11c2f0c40362bb691b33a78b764'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'0x55c9bbb71a5cc11c2f0c40362bb691b33a78b764'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/code/nft-labs/playing-with-thirdweb/.env/lib/python3.9/site-packages/thirdweb/modules/currency.py\u001b[0m in \u001b[0;36mallowance\u001b[0;34m(self, spender)\u001b[0m\n\u001b[1;32m     52\u001b[0m         \u001b[0mGets\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mallowance\u001b[0m \u001b[0mof\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mcurrent\u001b[0m \u001b[0maddress\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     53\u001b[0m         \"\"\"\n\u001b[0;32m---> 54\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__abi_module\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mallowance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_signer_address\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mspender\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     55\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mallowance_of\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mowner\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mspender\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/code/nft-labs/playing-with-thirdweb/.env/lib/python3.9/site-packages/thirdweb/sdk.py\u001b[0m in \u001b[0;36m__get_signer_address\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    154\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__get_signer_address\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    155\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msigner_address\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 156\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mNoSignerException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    157\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msigner_address\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    158\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNoSignerException\u001b[0m: No signer (private key) supplied to SDK"
      ]
     }
    ],
@@ -843,7 +924,7 @@
    "hash": "a2d3aaee4560012b18958894f21c6dab05acf2cbe4b1b644ee955ae7df40fd79"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.12 64-bit ('nft': conda)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -857,9 +938,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
-  },
-  "orig_nbformat": 4
+   "version": "3.9.7"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
