--- a/collection_module.ipynb
+++ b/collection_module.ipynb
@@ -2,14 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Importing stuff\n",
-    "from nftlabs import NftlabsSdk, SdkOptions, ListArg, MintArg\n",
+    "from thirdweb import NftlabsSdk, ThirdwebSdk, SdkOptions, ListArg, MintArg\n",
     "import os"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'thirdweb.sdk.ThirdwebSdk'> <class 'thirdweb.sdk.ThirdwebSdk'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(NftlabsSdk, ThirdwebSdk)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -17,15 +41,22 @@
    "hash": "a2d3aaee4560012b18958894f21c6dab05acf2cbe4b1b644ee955ae7df40fd79"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.12 64-bit ('nft': conda)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.12"
-  },
-  "orig_nbformat": 4
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
