--- a/NFT_Module.ipynb
+++ b/NFT_Module.ipynb
@@ -2,32 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Importing stuff\n",
-    "from nftlabs import NftlabsSdk, SdkOptions, ListArg, MintArg\n",
+    "from thirdweb import ThirdwebSdk, SdkOptions, ListArg, MintArg\n",
     "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#choose your network\n",
     "\n",
     "network = \"https://rinkeby-light.eth.linkpool.io/\"\n",
-    "sdk = NftlabsSdk(SdkOptions(), network)\n",
+    "sdk = ThirdwebSdk(SdkOptions(), network)\n",
     "#dont forget to hide your private key\n",
     "sdk.set_private_key(\"a0064ca30a15d338590d95fc7d1e87f889d11fe31897340b391674e84d49f1ee\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,14 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "9\n"
      ]
     }
    ],
@@ -57,14 +57,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "9\n"
      ]
     }
    ],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -104,14 +104,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NftMetadata(name='nft1', description='', image='ipfs://bafkreidfkouid6zgubjjvv6hgxjv4srxqadtqmr3vwyyhparg77235maqy', properties={}, id=0, uri='ipfs://bafkreibohcs6a5qdqtrhs4aayxex53m4ljgbey4m2wtdzk4wgxcsr3m3oq'), NftMetadata(name='new nft!', description='NFT EXAMPLE', image='ipfs://QmdFeKxt6FJUNvaGgzYuYNRbpNWyHxP2PFzjsgPf1eD2Jf', properties={}, id=1, uri='ipfs://bafkreieupzdaoflb43aexdsmhsd26i33272dt7iwm7qfqleq5bz7n2vrqa'), NftMetadata(name='nft2', description='testingtesying', image='ipfs://bafkreibey43a7wvedzcbbspp42fwgwcbriy475vclqgkwbkn7bjbfuulzq', properties={'bgcolor': 'black'}, id=2, uri='ipfs://bafkreieysy3g52oglgjd3t2uwnsllhozsz2skleiyahc3ev3sbkzspid7y')]\n"
+      "[NftMetadata(name='nft1', description='', image='ipfs://bafkreidfkouid6zgubjjvv6hgxjv4srxqadtqmr3vwyyhparg77235maqy', properties={}, id=0, uri='ipfs://bafkreibohcs6a5qdqtrhs4aayxex53m4ljgbey4m2wtdzk4wgxcsr3m3oq'), NftMetadata(name='new nft!', description='NFT EXAMPLE', image='ipfs://QmdFeKxt6FJUNvaGgzYuYNRbpNWyHxP2PFzjsgPf1eD2Jf', properties={}, id=1, uri='ipfs://bafkreieupzdaoflb43aexdsmhsd26i33272dt7iwm7qfqleq5bz7n2vrqa'), NftMetadata(name='nft2', description='testingtesying', image='ipfs://bafkreibey43a7wvedzcbbspp42fwgwcbriy475vclqgkwbkn7bjbfuulzq', properties={'bgcolor': 'black'}, id=2, uri='ipfs://bafkreieysy3g52oglgjd3t2uwnsllhozsz2skleiyahc3ev3sbkzspid7y'), NftMetadata(name='new nft!', description='NFT EXAMPLE', image='ipfs://QmdFeKxt6FJUNvaGgzYuYNRbpNWyHxP2PFzjsgPf1eD2Jf', properties={}, id=3, uri='ipfs://bafkreieupzdaoflb43aexdsmhsd26i33272dt7iwm7qfqleq5bz7n2vrqa'), NftMetadata(name='new nft!', description='NFT EXAMPLE', image='ipfs://QmdFeKxt6FJUNvaGgzYuYNRbpNWyHxP2PFzjsgPf1eD2Jf', properties={}, id=4, uri='ipfs://bafkreieupzdaoflb43aexdsmhsd26i33272dt7iwm7qfqleq5bz7n2vrqa'), NftMetadata(name='new nft!', description='NFT EXAMPLE', image='ipfs://QmdFeKxt6FJUNvaGgzYuYNRbpNWyHxP2PFzjsgPf1eD2Jf', properties={}, id=5, uri='ipfs://bafkreieupzdaoflb43aexdsmhsd26i33272dt7iwm7qfqleq5bz7n2vrqa'), NftMetadata(name='new nft!', description='NFT EXAMPLE', image='ipfs://QmdFeKxt6FJUNvaGgzYuYNRbpNWyHxP2PFzjsgPf1eD2Jf', properties={}, id=6, uri='ipfs://bafkreieupzdaoflb43aexdsmhsd26i33272dt7iwm7qfqleq5bz7n2vrqa'), NftMetadata(name='new nft!', description='NFT EXAMPLE', image='ipfs://QmdFeKxt6FJUNvaGgzYuYNRbpNWyHxP2PFzjsgPf1eD2Jf', properties={}, id=7, uri='ipfs://bafkreieupzdaoflb43aexdsmhsd26i33272dt7iwm7qfqleq5bz7n2vrqa'), NftMetadata(name='new nft!', description='NFT EXAMPLE', image='', properties={}, id=8, uri='ipfs://bafkreibmf6eyxpv2f4dwavkx2aykk5j3dg2fikemaxg3yqx4tzcsucwtm4'), NftMetadata(name='new nft!', description='NFT EXAMPLE', image=None, properties={}, id=9, uri='ipfs://bafkreigceqcyfucoya4eapngzduxw5qqjhiqwq264uabygbpbxr2nam4u4')]\n"
      ]
     }
    ],
@@ -122,14 +122,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NftMetadata(name='nft1', description='', image='ipfs://bafkreidfkouid6zgubjjvv6hgxjv4srxqadtqmr3vwyyhparg77235maqy', properties={}, id=0, uri='ipfs://bafkreibohcs6a5qdqtrhs4aayxex53m4ljgbey4m2wtdzk4wgxcsr3m3oq'), NftMetadata(name='new nft!', description='NFT EXAMPLE', image='ipfs://QmdFeKxt6FJUNvaGgzYuYNRbpNWyHxP2PFzjsgPf1eD2Jf', properties={}, id=1, uri='ipfs://bafkreieupzdaoflb43aexdsmhsd26i33272dt7iwm7qfqleq5bz7n2vrqa'), NftMetadata(name='nft2', description='testingtesying', image='ipfs://bafkreibey43a7wvedzcbbspp42fwgwcbriy475vclqgkwbkn7bjbfuulzq', properties={'bgcolor': 'black'}, id=2, uri='ipfs://bafkreieysy3g52oglgjd3t2uwnsllhozsz2skleiyahc3ev3sbkzspid7y')]\n"
+      "[NftMetadata(name='new nft!', description='NFT EXAMPLE', image='ipfs://QmdFeKxt6FJUNvaGgzYuYNRbpNWyHxP2PFzjsgPf1eD2Jf', properties={}, id=7, uri='ipfs://bafkreieupzdaoflb43aexdsmhsd26i33272dt7iwm7qfqleq5bz7n2vrqa'), NftMetadata(name='new nft!', description='NFT EXAMPLE', image='ipfs://QmdFeKxt6FJUNvaGgzYuYNRbpNWyHxP2PFzjsgPf1eD2Jf', properties={}, id=1, uri='ipfs://bafkreieupzdaoflb43aexdsmhsd26i33272dt7iwm7qfqleq5bz7n2vrqa'), NftMetadata(name='new nft!', description='NFT EXAMPLE', image='ipfs://QmdFeKxt6FJUNvaGgzYuYNRbpNWyHxP2PFzjsgPf1eD2Jf', properties={}, id=6, uri='ipfs://bafkreieupzdaoflb43aexdsmhsd26i33272dt7iwm7qfqleq5bz7n2vrqa'), NftMetadata(name='new nft!', description='NFT EXAMPLE', image='ipfs://QmdFeKxt6FJUNvaGgzYuYNRbpNWyHxP2PFzjsgPf1eD2Jf', properties={}, id=3, uri='ipfs://bafkreieupzdaoflb43aexdsmhsd26i33272dt7iwm7qfqleq5bz7n2vrqa'), NftMetadata(name='new nft!', description='NFT EXAMPLE', image='ipfs://QmdFeKxt6FJUNvaGgzYuYNRbpNWyHxP2PFzjsgPf1eD2Jf', properties={}, id=4, uri='ipfs://bafkreieupzdaoflb43aexdsmhsd26i33272dt7iwm7qfqleq5bz7n2vrqa'), NftMetadata(name='new nft!', description='NFT EXAMPLE', image='ipfs://QmdFeKxt6FJUNvaGgzYuYNRbpNWyHxP2PFzjsgPf1eD2Jf', properties={}, id=5, uri='ipfs://bafkreieupzdaoflb43aexdsmhsd26i33272dt7iwm7qfqleq5bz7n2vrqa'), NftMetadata(name='nft2', description='testingtesying', image='ipfs://bafkreibey43a7wvedzcbbspp42fwgwcbriy475vclqgkwbkn7bjbfuulzq', properties={'bgcolor': 'black'}, id=2, uri='ipfs://bafkreieysy3g52oglgjd3t2uwnsllhozsz2skleiyahc3ev3sbkzspid7y'), NftMetadata(name='new nft!', description='NFT EXAMPLE', image='', properties={}, id=8, uri='ipfs://bafkreibmf6eyxpv2f4dwavkx2aykk5j3dg2fikemaxg3yqx4tzcsucwtm4'), NftMetadata(name='new nft!', description='NFT EXAMPLE', image=None, properties={}, id=9, uri='ipfs://bafkreigceqcyfucoya4eapngzduxw5qqjhiqwq264uabygbpbxr2nam4u4')]\n"
      ]
     }
    ],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -191,14 +191,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "E:\\Anaconda\\envs\\web3\\lib\\site-packages\\web3\\contract.py:1168: UserWarning: The log with transaction hash: HexBytes('0x6c8813725b07b36ee8a5e8a5d2f6561e0f1e5af7092525634e9d19386deace91') and logIndex: 0 encountered the following error during processing: MismatchedABI(The event signature did not match the provided ABI). It has been discarded.\n",
+      "/Users/prathamprasoon/miniforge3/envs/nft/lib/python3.8/site-packages/thirdweb_web3/contract.py:1170: UserWarning: The log with transaction hash: HexBytes('0x931813e323addc7301216f2af21f8b214cfb0309ce037d2ef0d5dc005c065a81') and logIndex: 0 encountered the following error during processing: MismatchedABI(The event signature did not match the provided ABI). It has been discarded.\n",
       "  warnings.warn(\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "NftMetadata(name='new nft!', description='NFT EXAMPLE', image='ipfs://QmdFeKxt6FJUNvaGgzYuYNRbpNWyHxP2PFzjsgPf1eD2Jf', properties={}, id=1, uri='ipfs://bafkreieupzdaoflb43aexdsmhsd26i33272dt7iwm7qfqleq5bz7n2vrqa')"
+       "NftMetadata(name='new nft!', description='NFT EXAMPLE', image='ipfs://QmdFeKxt6FJUNvaGgzYuYNRbpNWyHxP2PFzjsgPf1eD2Jf', properties={}, id=10, uri='ipfs://bafkreieupzdaoflb43aexdsmhsd26i33272dt7iwm7qfqleq5bz7n2vrqa')"
       ]
      },
      "execution_count": 11,
@@ -227,27 +227,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "E:\\Anaconda\\envs\\web3\\lib\\site-packages\\web3\\contract.py:1168: UserWarning: The log with transaction hash: HexBytes('0xa8039f0e254775f03a69ee25a6569f08c120f51848a67656d8c2c25e07932782') and logIndex: 0 encountered the following error during processing: MismatchedABI(The event signature did not match the provided ABI). It has been discarded.\n",
+      "/Users/prathamprasoon/miniforge3/envs/nft/lib/python3.8/site-packages/thirdweb_web3/contract.py:1170: UserWarning: The log with transaction hash: HexBytes('0x86d661f4a96c65533261fd690659ecc1951d32331efc48cb28b430721bf2dd6e') and logIndex: 1 encountered the following error during processing: MismatchedABI(The event signature did not match the provided ABI). It has been discarded.\n",
       "  warnings.warn(\n",
-      "E:\\Anaconda\\envs\\web3\\lib\\site-packages\\web3\\contract.py:1168: UserWarning: The log with transaction hash: HexBytes('0xa8039f0e254775f03a69ee25a6569f08c120f51848a67656d8c2c25e07932782') and logIndex: 1 encountered the following error during processing: MismatchedABI(The event signature did not match the provided ABI). It has been discarded.\n",
+      "/Users/prathamprasoon/miniforge3/envs/nft/lib/python3.8/site-packages/thirdweb_web3/contract.py:1170: UserWarning: The log with transaction hash: HexBytes('0x86d661f4a96c65533261fd690659ecc1951d32331efc48cb28b430721bf2dd6e') and logIndex: 2 encountered the following error during processing: MismatchedABI(The event signature did not match the provided ABI). It has been discarded.\n",
       "  warnings.warn(\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[NftMetadata(name='new nft!', description='NFT EXAMPLE', image='ipfs://QmdFeKxt6FJUNvaGgzYuYNRbpNWyHxP2PFzjsgPf1eD2Jf', properties={}, id=3, uri='ipfs://bafkreieupzdaoflb43aexdsmhsd26i33272dt7iwm7qfqleq5bz7n2vrqa'),\n",
-       " NftMetadata(name='new nft!', description='NFT EXAMPLE', image='ipfs://QmdFeKxt6FJUNvaGgzYuYNRbpNWyHxP2PFzjsgPf1eD2Jf', properties={}, id=4, uri='ipfs://bafkreieupzdaoflb43aexdsmhsd26i33272dt7iwm7qfqleq5bz7n2vrqa')]"
+       "[NftMetadata(name='new nft!', description='NFT EXAMPLE', image='ipfs://QmdFeKxt6FJUNvaGgzYuYNRbpNWyHxP2PFzjsgPf1eD2Jf', properties={}, id=11, uri='ipfs://bafkreieupzdaoflb43aexdsmhsd26i33272dt7iwm7qfqleq5bz7n2vrqa'),\n",
+       " NftMetadata(name='new nft!', description='NFT EXAMPLE', image='ipfs://QmdFeKxt6FJUNvaGgzYuYNRbpNWyHxP2PFzjsgPf1eD2Jf', properties={}, id=12, uri='ipfs://bafkreieupzdaoflb43aexdsmhsd26i33272dt7iwm7qfqleq5bz7n2vrqa')]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,24 +275,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "E:\\Anaconda\\envs\\web3\\lib\\site-packages\\web3\\contract.py:1168: UserWarning: The log with transaction hash: HexBytes('0x9305becadadcce82561d5a80595913a464d2bcfe4b0bcb778a30ea69e166d94b') and logIndex: 1 encountered the following error during processing: MismatchedABI(The event signature did not match the provided ABI). It has been discarded.\n",
+      "/Users/prathamprasoon/miniforge3/envs/nft/lib/python3.8/site-packages/thirdweb_web3/contract.py:1170: UserWarning: The log with transaction hash: HexBytes('0x6815bfff03672b5cac446073ee73689d49ed43b113dda724a0b6f40ba81d424a') and logIndex: 0 encountered the following error during processing: MismatchedABI(The event signature did not match the provided ABI). It has been discarded.\n",
       "  warnings.warn(\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "NftMetadata(name='new nft!', description='NFT EXAMPLE', image='ipfs://QmdFeKxt6FJUNvaGgzYuYNRbpNWyHxP2PFzjsgPf1eD2Jf', properties={}, id=5, uri='ipfs://bafkreieupzdaoflb43aexdsmhsd26i33272dt7iwm7qfqleq5bz7n2vrqa')"
+       "NftMetadata(name='new nft!', description='NFT EXAMPLE', image='ipfs://QmdFeKxt6FJUNvaGgzYuYNRbpNWyHxP2PFzjsgPf1eD2Jf', properties={}, id=13, uri='ipfs://bafkreieupzdaoflb43aexdsmhsd26i33272dt7iwm7qfqleq5bz7n2vrqa')"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
