--- a/collection_module.ipynb
+++ b/collection_module.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "# Importing stuff\n",
-    "from nftlabs import NftlabsSdk, SdkOptions, ListArg, MintArg\n",
+    "from thirdweb import ThirdwebSdk, SdkOptions, ListArg, MintArg\n",
     "import os"
    ]
   }
