--- a/NFT_Module.ipynb
+++ b/NFT_Module.ipynb
@@ -419,7 +419,8 @@
     "# def set_restricted_transfer(self, restricted=False):\n",
     "# Sets the restricted transfer flag\n",
     "# Parameters\n",
-    "# restricted:bool"
+    "# restricted:bool\n",
+    "# Restricted method is used to prevent making an NFT transferrable, ie a degree"
    ]
   },
   {
