--- a/NFT_Module.ipynb
+++ b/NFT_Module.ipynb
@@ -393,7 +393,9 @@
     "# Sets approval for specified operator, defaults to grant approval\n",
     "# Parameters\n",
     "# operator:str\tUndocumented\n",
-    "# approved:bool"
+    "# approved:bool\n",
+    "\n",
+    "# the operator is the owner of the private key ie the walletholder"
    ]
   },
   {
