--- a/market_module.ipynb
+++ b/market_module.ipynb
@@ -169,15 +169,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'market_module' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/l3/dpyd7nqs0rbgc41kg_f75sym0000gn/T/ipykernel_5954/3173363909.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#list an asset in the marketplace\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m#what arguments should be passed for the listarg\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mmarket_module\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mListArg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0masset_contract\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"0x5a5D758636e44767afAc67184B2249F5DBcACb8f\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtoken_id\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcurrency_contract\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"0x75b37A3EDB89bedF68D7866e4c539f914F7A985c\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprice_per_token\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m5000000000000000000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mquantity\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtokens_per_buyer\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0mseconds_until_start\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mseconds_until_end\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3600\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'market_module' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#list an asset in the marketplace\n",
     "#what arguments should be passed for the listarg\n",
-    "# market_module.list(ListArg(\n",
-    "\n",
-    "# ))"
+    "market_module.list(ListArg(asset_contract=\"0x5a5D758636e44767afAc67184B2249F5DBcACb8f\",token_id=1, currency_contract=\"0x75b37A3EDB89bedF68D7866e4c539f914F7A985c\", price_per_token=5000000000000000000, quantity=1, tokens_per_buyer=1,  seconds_until_start=30, seconds_until_end=3600))"
    ]
   },
   {
@@ -266,6 +276,13 @@
     "asset_id = 1\n",
     "market_module.unlist_all(asset_id)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
