--- a/market_module.ipynb
+++ b/market_module.ipynb
@@ -187,7 +187,10 @@
    "source": [
     "#list an asset in the marketplace\n",
     "#what arguments should be passed for the listarg\n",
-    "market_module.list(ListArg(asset_contract=\"0x5a5D758636e44767afAc67184B2249F5DBcACb8f\",token_id=1, currency_contract=\"0x75b37A3EDB89bedF68D7866e4c539f914F7A985c\", price_per_token=5000000000000000000, quantity=1, tokens_per_buyer=1,  seconds_until_start=30, seconds_until_end=3600))"
+    "market_module.list(ListArg(asset_contract=\"0x5a5D758636e44767afAc67184B2249F5DBcACb8f\",token_id=1, currency_contract=\"0x75b37A3EDB89bedF68D7866e4c539f914F7A985c\", price_per_token=5000000000000000000, quantity=1, tokens_per_buyer=1,  seconds_until_start=30, seconds_until_end=3600))\n",
+    "\n",
+    "\n",
+    "market_module.set_market_fee_bps(10 * 100)"
    ]
   },
   {
