Co-authored-by: stronginasuit <stronginasuit@users.noreply.github.com>

--- a/market_module.ipynb
+++ b/market_module.ipynb
@@ -285,7 +285,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# roles functions for each module"
+   ]
   }
  ],
  "metadata": {
